# rocket-test

./: .env  Cargo.toml  Rocket.toml  docker-compose.yml  notes.md
migrations/: 20230206210143_create_users.sql
src/: main.rs
src/fairings/: db.rs
src/models/: our_date_time.rs  post_type.rs  user.rs  user_status.rs
src/routes/: user.rs
