# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rocket_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rocket_test"
path = "src/main.rs"

[lib]
name = "rocket_test"
path = "src/lib.rs"

[dependencies]
ammonia = "3.1.2"
argon2 = "0.3"
chrono = "0.4"
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5.4"
rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid"]}
rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"]}
sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
uuid = {version = "0.8.2", features = ["v4"]}
zxcvbn = "2"
